article/dacca_benchmark/cpu_logs/slurm-37653037.out
Running on gl3400
Running in /home/chenjunc/dacca_benchmark
Running with 36 CPUs
  File "/home/chenjunc/dacca_benchmark/benchmark_dacca.py", line 225
    mem_profile: bool = False
    ^^^^^^^^^^^
SyntaxError: invalid syntax
